<resources>
    <string name="app_name">FirebaseAuthentication</string>

    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="fields_mandatory">All fields are mandatory</string>
    <string name="verification_email_sent">Verification email sent to:</string>
    <string name="verification_email_failure">Failed to send verification email</string>
    <string name="login_failed">Login failed</string>
    <string name="check_network_connection">Internet connection not available. Please check your network settings</string>
    <string name="email_verified">Email verified</string>
    <string name="account_creation_failed">Account creation failed:</string>
    <string name="enter_email">Enter email</string>
    <string name="email_sent">Email sent</string>
    <string name="logout">Logout</string>
</resources>
