<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16dp"
            android:layout_marginLeft="@dimen/spacing_16dp"
            android:layout_marginRight="@dimen/spacing_16dp"
            android:layout_marginStart="@dimen/spacing_16dp"
            android:layout_marginTop="@dimen/spacing_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            app:layout_constraintEnd_toEndOf="@id/til_first_name"
            app:layout_constraintStart_toStartOf="@+id/til_first_name"
            app:layout_constraintTop_toBottomOf="@+id/til_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_16"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            app:layout_constraintEnd_toEndOf="@+id/til_last_name"
            app:layout_constraintStart_toStartOf="@+id/til_last_name"
            app:layout_constraintTop_toBottomOf="@+id/til_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            app:layout_constraintEnd_toEndOf="@+id/til_signup_email"
            app:layout_constraintStart_toStartOf="@+id/til_signup_email"
            app:layout_constraintTop_toBottomOf="@+id/til_signup_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            android:background="@color/primaryColor"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_signup_password"/>

        <ProgressBar
            android:id="@+id/progress_signup"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_signup_password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
