<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_first_name_title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:text="@string/first_name"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_first_name_value"
        style="@style/ContentTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_first_name_title"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="First Name"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_first_name_title,tv_first_name_value"/>

    <TextView
        android:id="@+id/tv_last_name_title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:text="@string/last_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_first_name_title"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier_first_name"
        />

    <TextView
        android:id="@+id/tv_last_name_value"
        style="@style/ContentTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_last_name_title"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Last Name"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_last_name_title,tv_last_name_value"/>

    <TextView
        android:id="@+id/tv_email_address_title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="@id/tv_last_name_title"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier_last_name"
        />

    <TextView
        android:id="@+id/tv_email_address_value"
        style="@style/ContentTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_email_address_title"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="email@example.com"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_email_address_title,tv_email_address_value"/>

    <TextView
        android:id="@+id/tv_email_verified_title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:text="@string/email_verified"
        app:layout_constraintLeft_toLeftOf="@+id/tv_email_address_title"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/barrier_email"
        />

    <TextView
        android:id="@+id/tv_email_verified_value"
        style="@style/ContentTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_email_verified_title"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Verified"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_8dp"
        android:layout_marginRight="@dimen/spacing_8dp"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:background="@color/primaryColor"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>